# query-normalizer

./: Dockerfile  Makefile  README.md  TODO  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: release.yml  reusable-test.yml  test.yml
app/: __init__.py  main.py  normalization.py  schemas.py
query_normalizer/: __init__.py  cli.py  core.py  schemas.py  server.py
tests/: test_api.py  test_cli.py
