[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "query-normalizer"
dynamic = ["version"]
description = "Modern Python library for search-query normalization"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Query Normalizer Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "pymorphy3>=2.0.0,<3.0.0",
    "simplemma>=1.1.0,<2.0.0",
    "nltk>=3.9.4,<4.0.0",
    "stop-words>=2025.11.4",
    "confusable-homoglyphs>=3.3.1,<4.0.0",
    "beautifulsoup4>=4.14.0,<5.0.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/anomalyco/query-normalizer"
Repository = "https://github.com/anomalyco/query-normalizer"
Issues = "https://github.com/anomalyco/query-normalizer/issues"

[tool.setuptools]
packages = ["query_normalizer"]

[tool.setuptools.dynamic]
version = {attr = "query_normalizer.__init__.__version__"}

[project.scripts]
query-normalizer = "query_normalizer.cli:cli"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
strict = true